--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -107,7 +107,7 @@
                                                         "Approved" => "badge-success",
                                                         "Under Review" => "badge-warning",
                                                         "Rejected" => "badge-danger",
-                                                        "Completed" => "badge-light",
+                                                        "Completed" => "bg-light text-dark border",
                                                         _ => "badge-info"
                                                     };
                                                 }
